Compensate for fixed header in jump links

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,15 @@ body {
 	margin-top: 152px;
 }
 
+/* this makes jump links work correctly with the header overlaying content */
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -152px;
+  height: 152px;
+  visibility: hidden;
+}
+
 .container {
 	max-width: 1024px;
 }
